* 1.6
- Path to files of the help project now can be stored relative to location of the project. Thanks to Jozsef Bekes for the patch
- Added web translations to frech and dutch. Thanks to Luc Van Asch
- Added field to project to add HTML code into the head tag of the generated web pages (to add google analytics code, for example)
- Added setting to remove / repair broken internal links.

* 1.5
- Bug fixed. chmProcessor was not working on 64 bits operating systems due to AnyCPU option. Now the application runs always on 32 bit mode, needed to run Tidy. Thanks to cjervin for the info.
- Multiple Word documents can be joined on a single help.
- Added option /q for Quiet mode (Thanks to Mike Hudgell):
Quiet mode [/q] prevents a window being shown when run with the /g command line and logs messages to stdout/stderr.
- Added option to make the log more or less verbose (Thanks to Mike Hudgell): 
Log Level [/l1, /l2, /l3] lets you choose how much information is output, where /l1 is minimal and /l3 is all the information.
- Added window that shows details when an error happens. List of all errors are now stored on the generation window.
- Bug fixed "Hyperlink images are not included in CHM" (Thanks to Paolo Moretti)
- Bug fixed "If 2 styles "title 1 and 2" follows without text, the conversion is not good."
- Bug fixed. When the source word file had non ASCII characters, images were not well referenced from the CHM file.

* 1.4
- JavaHelp generation.
- Use of Office 2007 Add-in to generate XPS and PDF files.
- Check of broken links inside the document. A "WARNING" text will be written on the generation log for each broken link found.
- Solved bug on web help topic load. Was broken when the topic text had more than one word.

* 1.3
- Google sitemap generation for web help.
- Translation for web static texts.
- Now MS Word styles are not stored into the HTML. They are out, into a common CSS file. This means smaller CHM / web file topics.