@@ -1,8 +1,8 @@
 - Change documentation. Think about documentate the chmprocessorlib for external use.
 - Remove temporal file with joined word docs.
 - Remove compile warnings about UComIStream
-- Allow to add file to add tags to the <head> of the generated html files. Needed for google stadistics.
 - If pdfcreator hangs up, if the user press cancel, exit inmediatelly. Add a referente to the user interface to the PdfPrinter class and check if the process was cancelled.
-- Try to make it work with others character sets. 
-- When two docs are joined, if you generate twice, the second time it gives an error that first document cannot be opened.
-- Add option to remove broken internal links.
+- Save relative paths brokes file names if they contain unicode characters. check if there is a unicode version of the win32 called functions
+- Remove tidy references
+- AppSettings should not have a bunch of static members. make two static functions, to save and load from the registry, and make non-static the other members.
+- Remove classes EncodingItem and EncodingsList. they are not used
