@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252" >
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
 <title>%TITLE%</title>
 <meta name="GENERATOR" content="chmProcessor">
 <link rel="stylesheet" type="text/css" href="contents.css">
